--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "jest": "^29.7.0",
+    "mock-socket": "^9.3.1",
     "supertest": "^6.3.3"
   },
   "author": "Engineering Efficiency Team",
